Fix chat polling and Supabase controller build